feat: add x-ignore-generate example
