# src/auth/auth.controller.ts
@@ -1,5 +1,5 @@
 import { Request, Response } from 'express';
-import { Injectable } from '@nestjs/common';
+import { Controller, Injectable, Logger, Post, Session } from '@nestjs/common';
 import { AuthService } from './auth.service';
 import { AuthController } from '../generated/controllers/interfaces/auth.controller';
 import { Login } from '../generated/openapi';
@@ -14,5 +14,17 @@ export class AuthControllerImpl implements AuthController {
     body: Login,
   ): Promise<void> {
     return this.authService.login(body);
+  }
+}
+
+// Additional controller for using special decorators
+@Controller('/auths')
+export class AdditionalAuthController {
+  constructor(private readonly authService: AuthService) {}
+
+  @Post('logout')
+  async logout(@Session() session: Record<string, any>): Promise<void> {
+    Logger.log(`Logging out with session: ${JSON.stringify(session)}`);
+    return this.authService.logout();
   }
 }
